2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp (do_file): Say "non-portable"
	instead of "unportable" in diagnostic message.  Prompted by a
	similar change to the tzdata project by Paul Eggert.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi.in (Delimiters):
	* man/groff.7.man (Delimiters): Clarify that an invalid escape
	sequence is valid as a delimiter if the character after the
	escape character would be valid as one.

	Fixes <https://savannah.gnu.org/bugs/?67375>.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi.in (Delimiters):
	* man/groff.7.man (Delimiters): Clarify what makes an escape
	sequence ineligible for use as a delimiter--not its
	parameterization, but its own use of delimiters.  Relatedly,
	document the clever hack (dirty trick?) GNU eqn and tbl use to
	surround arbitrary user input with delimiters that are nigh upon
	guaranteed not to collide with that input.

	Fixes <https://savannah.gnu.org/bugs/?67372>.  I hope.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Split `TOKEN_SPECIAL_CHAR` token type into two, leaving
	the existing one for `\(` and `\[` escape sequences, and
	creating a new `TOKEN_DELIMITED_SPECIAL_CHAR` for the delimited
	`\C` escape sequence.

	* src/roff/troff/token.h (class token): Add new
	`TOKEN_DELIMITED_SPECIAL_CHAR` enumeration constant.
	(token::is_special_character, token::is_any_character): Return
	`true` for both new and old token types.
	* src/roff/troff/input.cpp (token::next) <C>: Tokenize `C`
	escape sequence as `TOKEN_DELIMITED_SPECIAL_CHAR`.
	(token::is_usable_as_delimiter): Reject
	`TOKEN_DELIMITED_SPECIAL_CHAR` as a delimiter.
	(token::operator==, token::description, process_input_stack)
	(token::get_charinfo, token::add_to_zero_width_node_list)
	(token::process): Treat new token type the same as the old one.
