@@ -1,3 +1,15 @@
+2025-12-23  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/troff/input.cpp (token::description): Improve
+	diagnostic when describing a nonexistent special character or
+	class by reporting its identifier, at least up to the point
+	where the size of our buffer truncates it.  (How do you get a
+	"nonexistent special character or class" that nevertheless has
+	an identifier?  It's part of the input syntax.  What you do is
+	attempt to interpolate a special character (or class--an invalid
+	operation anyway, but stay with me) in a context where character
+	interpolation makes no sense, as in a numeric expression.
+
 2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/preproc/preconv/preconv.cpp (do_file): Say "non-portable"
